# SecondMileStone

./: AStarAlgorithm.cpp  AStarAlgorithm.h  BFSAlgorithm.cpp  BFSAlgorithm.h  BestFSAlgorithm.cpp  BestFSAlgorithm.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFSAlgorithm.cpp  DFSAlgorithm.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.cpp  ISearcher.h  Matrix10x10.txt  Matrix22x22.txt  MatrixProblem.cpp  MatrixProblem.h  MatrixTester.cpp  MatrixTester.h  MyClientHandler.cpp  MyClientHandler.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  README.md  SearchSolverAdapter.cpp  SearchSolverAdapter.h  Searchable.cpp  Searchable.h  Searcher.cpp  Searcher.h  Server.cpp  Server.h  Solver.cpp  Solver.h  (+11 more)
